RESOLVED FIXED212646
Crash with uncaught exception: *** -[AVSampleBufferAudioRenderer enqueueSampleBuffer:] Sample buffer has media type 'vide' instead of 'soun'
https://bugs.webkit.org/show_bug.cgi?id=212646
Summary Crash with uncaught exception: *** -[AVSampleBufferAudioRenderer enqueueSampl...
Jer Noble
Reported 2020-06-02 10:50:02 PDT
Crash with uncaught exception: *** -[AVSampleBufferAudioRenderer enqueueSampleBuffer:] Sample buffer has media type 'vide' instead of 'soun'
Attachments
Patch (5.05 KB, patch)
2020-06-02 10:57 PDT, Jer Noble
eric.carlson: review+
Patch for landing (5.05 KB, patch)
2020-06-02 11:04 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-06-02 10:52:15 PDT
Jer Noble
Comment 2 2020-06-02 10:57:17 PDT
Eric Carlson
Comment 3 2020-06-02 10:59:50 PDT
Comment on attachment 400839 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400839&action=review > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:1140 > + // AVSampleBufferDisplayLayer will throw an un-documented exception is passed a sample s/is/if/ > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:1206 > + // AVSampleBufferAudioRenderer will throw an un-documented exception is passed a sample Ditto
Jer Noble
Comment 4 2020-06-02 11:04:20 PDT
Created attachment 400841 [details] Patch for landing
Peng Liu
Comment 5 2020-06-02 11:07:35 PDT
Comment on attachment 400839 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400839&action=review > Source/WebCore/ChangeLog:9 > + Protect against the possibility of AVStreamDataParser generating non-video or -audio saples in an otherwise s/saples/samples?
Jer Noble
Comment 6 2020-06-03 12:25:56 PDT
Note You need to log in before you can comment on or make changes to this bug.