Source/WebCore/platform/graphics/FourCC.h
@@ -49,4 +49,14 @@ struct FourCC {
     uint32_t value { 0 };
 };
 
-}
+} // namespace WebCore
+
+namespace WTF {
+
+template<typename> struct LogArgument;
+
+template<> struct LogArgument<WebCore::FourCC> {
+    static String toString(const WebCore::FourCC& code) { return code.toString(); }
+};
+
+} // namespace WTF
